# fin-stack-server

./: .gitignore  Cargo.toml  DEPLOYMENT.md  DOCKER_SETUP.md  README.md  diesel.toml  wait-for-postgres.sh
nginx/: nginx.conf
scripts/: deploy.sh  init-db.sql  run-frontend-only.sh  run-full-stack.sh
src/: main.rs
src/config/: errors.rs  mod.rs
src/controllers/: auth_controller.rs  expense_controller.rs  income_controller.rs  mod.rs
src/database/: db_connection.rs  db_migrations.rs  mod.rs
src/database/migrations/2025-05-25-202704_create_users_table/: up.sql
src/database/migrations/2025-05-25-202811_create_income_table/: up.sql
src/database/migrations/2025-05-25-202822_create_expense_table/: up.sql
src/middleware/: auth_middleware.rs
src/models/: auth.rs  expense.rs  income.rs  mod.rs  schema.rs  user.rs
src/routes/: auth_routes.rs  expense_routes.rs  health_routes.rs  income_routes.rs  mod.rs
src/services/: auth_service.rs  expense_service.rs  income_service.rs  mod.rs
