[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.0"
env_logger = "0.10.1"
log = "0.4"
chrono = { version = "0.4.31", features = ["serde"] } 
uuid = { version = "1.6.1", features = ["serde", "v4"] } 
rust_decimal = { version = "1.37.1", features = ["serde-float", "serde", "db-diesel-postgres"] } 

diesel = { version = "2.2.5", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
diesel_migrations = "2.2.0" 
r2d2 = "0.8.10"
diesel_derives = { version = "2.2.5" } 

actix-cors = "0.7"

utoipa = { version = "5.3.1", features = ["actix_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

# Authentication dependencies
bcrypt = "0.15"
jsonwebtoken = "9.2"
actix-web-httpauth = "0.8"
